crates/doodle-core/tests/snapshots/broken_syntax__43_comment_in_interpolation.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[comment-in-interpolation]: a comment can't appear inside a string's `{…}` — move it outside, or bind the value to a name first
  --> 43-comment-in-interpolation.doodle:1:14
1 | show("{score # points}")
  |              ^
